--- a/public/main.css
+++ b/public/main.css
@@ -1,35 +1,174 @@
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  /* colors */
+  --background-color: rgb(17, 17, 17);
+  --feed-color: rgb(26, 26, 26);
+  --text-color: rgb(255, 255, 255);
+  --border-color: rgb(42, 42, 42);
 }
 
 body {
+  font-family: "Spartan", serif;
+  color: var(--text-color);
+  background-color: var(--background-color);
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .header {
   font-weight: 700;
+  margin: 1rem;
 }
 
 .main-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+
 }
 
+.user-form {
+margin-top: 15rem;
+}
+
+.username {
+  border-radius: 10px;
+  padding: 5px 10px;
+  outline: none;
+}
+
+.username-submit {
+  padding: 5px 10px;
+  border-radius: 15px;
+  outline: none;
+}
+
+.username-submit:hover,
+.username:hover,
+.chat-input:hover,
+.chat-submit:hover  {
+  background-color: rgb(199, 199, 199);
+}
 .chat-container {
   display: none;
-  height: 450px;
+  height: 100%;
+  width: 800px;
+  grid-template: 'users messages';
+  grid-template-columns: 1fr 2fr;
+  background-color: var(--feed-color);
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  justify-items: stretch;
+  gap: 1rem;
+}
+
+.chat-sidebar{
+  position: relative;
+  grid-area: users;
+}
+
+#userList{
+padding: 1rem;
+}
+
+.userList__item{
+ line-height: 1.4rem;
+ margin: 1rem;
+}
+
+/* border */ 
+.border {
+  position: absolute;
+  margin: auto 0;
+  height: 100%;
+  border-right: 1px solid var(--border-color);
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+}
+
+.chat-messages-container {
+  grid-area: messages;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .chat-messages {
-  height: 300px;
-  width: 300px;
-  overflow: scroll;
+  min-height: 400px;
+  overflow-y: scroll;
+}
+
+.message-container {
+ background-color: var(--background-color);
+ padding: 1rem 0.5rem 1rem 1rem;
+ border-radius: 15px;
+ margin: 0.5rem;
+}
+
+.message__username{
+font-size: 1.1rem;
+margin-bottom: 0.5rem;
+}
+
+.message__date{
+font-size: 0.7rem;
+margin-bottom: 0.5rem;
+}
+
+.message__post{
+margin-top: 0.5rem;
 }
 
 .chat-form {
-  display: none;
+  display: grid;
+  grid-template: 'input submit';
+  grid-template-columns: 90% 10%;
+  margin: 1rem 0 0;
+
+}
+
+.chat-input{
+grid-area: input;
+padding: 5px 10px;
+outline: none;
+}
+
+.chat-submit{
+  grid-area: submit;
+  padding: 5px 10px;
+}
+/* scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(192, 192, 192); 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
 }
