--- a/public/main.css
+++ b/public/main.css
@@ -62,10 +62,10 @@ margin-top: 15rem;
 }
 .chat-container {
   display: none;
+  min-height: 400px;
   height: 100%;
   width: 800px;
   grid-template: 'users messages';
-  grid-template-columns: 1fr 2fr;
   background-color: var(--feed-color);
   padding: 1rem 2rem;
   border-radius: 10px;
@@ -73,19 +73,54 @@ margin-top: 15rem;
   gap: 1rem;
 }
 
+@media screen and (max-width: 700px) {
+  .chat-container {
+    width: 100%;
+  }
+}
+
 .chat-sidebar{
   position: relative;
   grid-area: users;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
+/* active user list */
 #userList{
 padding: 1rem;
 }
 
 .userList__item{
+ list-style: none;
  line-height: 1.4rem;
+ width: 100px;
+ padding: 0.5rem 1rem;
+ text-align: center;
  margin: 1rem;
+ border: 1px solid green;
+ border-radius:  25px;
+ background-color: var(--background-color);
 }
+
+/* offline user list */
+
+#offlineUserList {
+  padding: 1rem;
+}
+
+.offline-userList__item{
+  opacity: 0.8;
+  list-style: none;
+  line-height: 1.4rem;
+  width: 100px;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  margin: 1rem;
+  border: 1px solid red;
+  border-radius:  25px;
+  background-color: rgba(26, 26, 26, 0.8);
+ }
 
 /* border */ 
 .border {
@@ -99,14 +134,15 @@ padding: 1rem;
 }
 
 .chat-messages-container {
+  display: none;
   grid-area: messages;
   width: 100%;
-  display: flex;
   flex-direction: column;
 }
 
 .chat-messages {
   min-height: 400px;
+  height: 400px;
   overflow-y: scroll;
 }
 
@@ -134,7 +170,7 @@ margin-top: 0.5rem;
 .chat-form {
   display: grid;
   grid-template: 'input submit';
-  grid-template-columns: 90% 10%;
+  grid-template-columns: auto 60px;
   margin: 1rem 0 0;
 
 }
